--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,11 @@ android {
         ]
 
     }
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
 
     buildTypes {
         release {
@@ -47,4 +52,6 @@ dependencies {
     //compile 'com.github.lecho:hellocharts-android:v1.5.8'
     compile files('libs/Volley.jar')
     compile files('libs/xUtils-2.6.14.jar')
+    compile(name: 'xuanyuanxing_p2p', ext: 'aar')
+
 }
